<resources>
    <string name="app_name">GestionEtudiant</string>
    <string name="date_naissance_format">Date de naissance: %s</string>
    <string name="no_students_found">Aucun étudiant trouvé</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="student_id">ID Étudiant</string>
    <string name="student_image">Photo de l\'étudiant</string>
    <string name="profile_picture">Photo de profil</string>
    <!-- Boutons -->
    <string name="choose_birth_date">Choisir date de naissance</string>
    <string name="choose_image">Choisir une image</string>
    <string name="add">Ajouter</string>
    <string name="search">Rechercher</string>
    <string name="update">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="list_all">Lister tous</string>

    <!-- Messages divers -->


    <!-- Messages de validation -->
    <string name="error_empty_name">Veuillez entrer un nom</string>
    <string name="error_empty_firstname">Veuillez entrer un prénom</string>
    <string name="error_empty_birthdate">Veuillez sélectionner une date de naissance</string>
    <string name="error_empty_id">Veuillez entrer un ID</string>
    <string name="invalid_id">ID invalide</string>

    <!-- Messages de confirmation -->
    <string name="student_added">Étudiant ajouté avec succès</string>
    <string name="student_updated">Étudiant modifié avec succès</string>
    <string name="student_deleted">Étudiant supprimé avec succès</string>
    <string name="student_not_found">Étudiant introuvable</string>

</resources>